# server-monitor

./: .gitignore  Cargo.toml  README.md  env.kylit.example
docs/: DEPLOY_CHECKLIST.md  Help.md  INSTALLATION_FRERE.md  SETUP.md  TELEGRAM_WEBHOOK.md  telegram.md
scripts/: setup-telegram-bot.sh
src/: checks.rs  config.rs  diagnose.rs  diagnose_core.rs  docker.rs  ip_admin.rs  main.rs  telegram.rs  vitals.rs  webhook.rs
systemd/: clos-monitor.service
