[package]
name = "clos-monitor"
version = "0.1.0"
edition = "2021"
description = "Docker container monitor for ClosLamartine prod/staging with Telegram alerts"

[dependencies]
axum = "0.7"
bollard = "0.18"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2.5"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
